# comaps-tests

./: .gitignore  CMakeLists.txt  configure.sh  defines.hpp  private.h
android/: gradle.properties
coding/: url.cpp
data/: categories_cuisines.txt  countries.txt  countries_meta.txt  editor.config  mapcss-mapping.csv  replaced_tags.txt
dev_sandbox/: main.cpp
docs/: TRANSLATIONS.md
drape/: color.hpp
generator/: feature_maker.cpp  feature_sorter.cpp  intermediate_data.cpp  maxspeeds_parser.cpp  osm2meta.hpp  raw_generator.cpp  raw_generator.hpp  region_meta.cpp  road_penalty_generator.cpp  search_index_builder.cpp  translator.cpp  world_map_generator.hpp
indexer/: data_source.hpp  editable_map_object.cpp  editable_map_object.hpp  (+4 more)
libs/location_sharing/: CMakeLists.txt  README.md  crypto_util.cpp  crypto_util.hpp  location_sharing_session.cpp  location_sharing_session.hpp  location_sharing_types.cpp  location_sharing_types.hpp
libs/traffxml/: CMakeLists.txt  traff_decoder.cpp  traff_decoder.hpp  traff_model.cpp  traff_model.hpp  traff_model_xml.cpp  traff_model_xml.hpp  traff_source.cpp  traff_source.hpp  traff_storage.hpp
libs/traffxml/traff_assessment_tool/: mainwindow.cpp  map_widget.hpp  traffic_drawer_delegate_base.hpp  traffic_model.cpp  traffic_panel.cpp  traffic_panel.hpp  trafficmodeinitdlg.h
traffxml/: CMakeLists.txt  traff_decoder.cpp  traff_decoder.hpp  traff_model.cpp  traff_model.hpp  traff_model_xml.cpp  traff_model_xml.hpp  traff_source.cpp  traff_source.hpp  traff_storage.cpp  traff_storage.hpp
traffxml/traff_assessment_tool/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  map_widget.cpp  points_controller_delegate_base.hpp  traffic_mode.cpp  traffic_mode.hpp  traffic_model.cpp  traffic_model.hpp  traffic_panel.cpp  trafficmodeinitdlg.cpp  trafficmodeinitdlg.h
(+868 files in other folders)
